--- a/source/components/StatusBar/styles.m.css
+++ b/source/components/StatusBar/styles.m.css
@@ -1,8 +1,31 @@
 .statusBar {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 42px;
     border-bottom: #29487d;
     background-color: #4267b2;
     margin-bottom: 20px;
+
+    & button {
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+        color: var(--paletteColor12);
+        padding: 3px 10px;
+        border: 1px solid var(--paletteColor12);
+        border-radius: 3px;
+        outline: 0;
+        cursor: pointer;
+
+        & img {
+            width: 26px;
+            height: 26px;
+            margin-right: 10px;
+            transition: border .5s ease;
+            border: 1px solid var(--paletteColor5);
+            border-radius: 50%;
+        }
+    }
 }
