--- a/source/components/StatusBar/styles.m.css
+++ b/source/components/StatusBar/styles.m.css
@@ -51,6 +51,7 @@
             width: 9px;
             height: 9px;
             border-radius: 50%;
+            margin-left: 5px;
         }
     }
 
