--- a/source/components/StatusBar/styles.m.css
+++ b/source/components/StatusBar/styles.m.css
@@ -3,13 +3,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 42px;
+    height: 50px;
     border-bottom: #29487d;
     background-color: #4267b2;
-    margin-bottom: 20px;
 
-    & button {
+    & a {
         display: flex;
+        justify-content: center;
         align-items: center;
         background-color: transparent;
         color: var(--paletteColor12);
@@ -18,6 +18,11 @@
         border-radius: 3px;
         outline: 0;
         cursor: pointer;
+        border: 1px solid var(--paletteColor2);
+        text-decoration: none;
+        min-height: 35px;
+        min-width: 140px;
+        margin: 0 10px;
 
         & img {
             width: 26px;
