--- a/source/components/Login/styles.m.css
+++ b/source/components/Login/styles.m.css
@@ -5,7 +5,7 @@
     background-color: var(--paletteColor3); /* css variable */
     min-height: 100vh;
 
-    & a {
+    & button {
         transform: translateY(-100%);
         display: flex;
         justify-content: center;
@@ -21,5 +21,6 @@
         min-height: 35px;
         min-width: 140px;
         margin: 10px;
+        font-size: 16px;
     }
 }
