--- a/source/components/StatusBar/styles.m.css
+++ b/source/components/StatusBar/styles.m.css
@@ -33,6 +33,24 @@
         }
     }
 
+    & button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--paletteColor6);
+        color: var(--paletteColor12);
+        padding: 3px 10px;
+        border-radius: 3px;
+        outline: 0;
+        cursor: pointer;
+        border: 1px solid var(--paletteColor2);
+        text-decoration: none;
+        min-height: 35px;
+        min-width: 140px;
+        margin: 10px;
+        font-size: 16px;
+    }
+
     & .status {
         position: absolute;
         display: flex;
